gcp-infra/fe-deployment.yaml
# fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  labels:
    app: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      imagePullSecrets:
      - name: gcp-artifact-registry-key
      
      volumes:
      - name: cloudsql-key-volume
        secret:
          secretName: gcp-cloudsql-key

      containers:
      - name: frontend
        image: asia-south2-docker.pkg.dev/quiet-spirit-475711-g3/statusbus-repo/frontend:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
