gcp-infra/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-external-service
spec:
  type: NodePort
  selector:
    app: fe
  ports:
  - protocol: TCP
    port: 80         
    targetPort: 3000 
    nodePort: 30080
