gcp-infra/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP 
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001 
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: ClusterIP
  selector:
    app: fe
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
