gcp-infra/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statusbus-ingress
  annotations:
    # This line tells the ngrok-operator to claim this Ingress
    kubernetes.io/ingress.class: "ngrok"
spec:
  rules:
  - host: "statusbus.byaniket.online"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fe-service  
            port:
              number: 3000      

  - host: "api.statusbus.byaniket.online"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service 
            port:
              number: 3001
