gcp-infra/allow-iap-ssh.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-iap-and-health-checks
spec:
  order: 10
  selector: all()
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [22]
    source:
      nets: [35.235.240.0/20] # Google IAP Range
  - action: Allow
    protocol: TCP
    destination:
      ports: [22]
    source:
      nets: [130.211.0.0/22, 35.191.0.0/16] # GCP Health Checkers
  egress:
  - action: Allow
